syntax = "proto3";

package eventbus;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

service EventBus {
  rpc Publish (PublishRequest) returns (google.protobuf.Empty) {}
  rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}
}

message PublishRequest {
  google.protobuf.Any event = 1;
}

message SubscribeRequest {
  string offset = 1;
}

message SubscribeResponse {
  string offset = 1;
  google.protobuf.Any event = 2;
}
